--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1 class="mb-6">Joanne <br> Chen</h1>
         <div class="logo mb-6">
-            <img src="../images/logo.png" alt="#">
+            <img src="images/logo.png" alt="#">
         </div>
     </div>
     <section class="profile">
@@ -74,7 +74,7 @@
                 <li>
                     <h3 class="subtitle mb-1">六角學院 視覺設計實習生 | 2019/07－2020/06</h3>
                     <div class="work__img mb-1">
-                        <img src="../images/hexschool.svg" alt="#">
+                        <img src="images/hexschool.svg" alt="#">
                     </div>
                     <p class="mb-4">在六角學院長達一年的實習中，前期藉由公司課程掌握 HTML, CSS, Adobe
                         XD，設計給學員使用的名片設計教材，並參與六角週年活動，設計各式周邊商品及活動網路宣傳圖。後期進入 UI
@@ -115,17 +115,17 @@
             <ul class="flex-center copyrightLink">
                 <li>
                     <a href="#">
-                        <img src="../images/facebook.png" alt="#">
+                        <img src="images/facebook.png" alt="#">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../images/instagram-alt.png" alt="#">
+                        <img src="images/instagram-alt.png" alt="#">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../images/line.png" alt="#">
+                        <img src="images/line.png" alt="#">
                     </a>
                 </li>
             </ul>
