--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <li>
                     <h3 class="subtitle mb-1">Simtree 興趣咖啡 工讀生 | 2018－2019</h3>
                     <div class="work__img mb-1">
-                        <img src="../images/Simtree.png" alt="#">
+                        <img src="images/Simtree.png" alt="#">
                     </div>
                     <p>擔任外場及吧台服務生，學習咖啡相關知識。</p>
                 </li>
